Adding docs to  authentication API routes
