# app/Http/Controllers/Auth/RegisterController.php
@@ -67,11 +67,46 @@ class RegisterController extends Controller
 
 
     /**
-     * Create a new user instance after a valid registration.
-     *
-     * @param  array $data
-     * @return \ApiVue\Models\User
+     * @OA\Post(
+     *      tags={"Autentication"},
+     *      path="/api/register",
+     *      summary="Register new user",
+     *      description="Register new user",
+     *      @OA\Parameter(
+     *          name="name",
+     *          description="Name",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="email",
+     *          description="Email",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string"
+     *          )
+     *      ),
+     *      @OA\Parameter(
+     *          name="password",
+     *          description="Password",
+     *          required=true,
+     *          in="query",
+     *          @OA\Schema(
+     *              type="string",
+     *              format="password"
+     *          )
+     *      ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful operation"
+     *       )
+     * )
      */
+
     public function store(Request $request)
     {
 
